<resources>
    <string name="app_name">Silverpoint</string>
    <string name="incident_title">Incident title</string>
    <string name="latest_update_info">Latest update info</string>
    <string name="tap_to_view">Tap to view</string>
    <string name="last_updated">Last updated</string>
    <string name="just_a_sec">Just a sec…</string>
    <string name="loading">Loading…</string>
    <string name="view_incident_on_statuspage">View incident on Statuspage</string>
    <string name="view_active_incident">View active incident</string>
    <string name="no_active_incident_explanation">There currently isn\'t an active incident</string>
    <string name="debug_mode">Debug mode</string>
    <string name="general">General</string>
    <string name="start_worker">Start worker</string>
    <string name="start_querying_description">Start querying Discord\'s status</string>
    <string name="debug_activity_title">Debug</string>
    <string name="debug_panel_description">Various settings and info for debugging the app</string>
    <string name="incident_data_accuracy_disclaimer">Incident data is accurate within 15 minutes</string>
    <string name="clear_shared_preferences">Clear Shared Preferences</string>
    <string name="clear_shared_preferences_description">Clear the Shared Preferences for the current incident</string>
    <string name="active_incident">Active Incident</string>
    <string name="details_section_header">Details</string>
    <string name="worker_section_header">Worker</string>
    <string name="until_tomorrow">Until tomorrow</string>
    <string name="a_month">For a month</string>
    <string name="a_week">For a week</string>
    <string name="until_i_turn_them_back_on">Until I turn them back on</string>
    <string name="three_days">For three days</string>
    <string name="welcome_to_silverpoint">Welcome to Silverpoint</string>
    <string name="welcome_page_description">A simple app for receiving notifications when online services go down.</string>
    <string name="get_started">Get Started</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="enable_notifications_explanation">We\'ll need you to enable the notifications permission so we can alert you when services go down.</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="activity_main_settings_layout_title">Settings</string>
    <string name="activity_main_settings_layout_description">Configure aspects of the app</string>
    <string name="activity_incident_status_title">Active incident</string>
    <string name="activity_debug_last_ran_recently">Just now</string>
    <string name="activity_debug_panel_last_run_success">Success</string>
    <string name="activity_debug_panel_last_run_failure">Failure</string>
    <string name="settings_long_click_bottom_sheet_settings_label">Settings</string>
    <string name="settings_long_click_bottom_sheet_debug_label">Debug</string>
    <string name="license_activity_title">Licenses</string>
    <string name="license_frontend_section_header">Frontend</string>
    <string name="license_frontend_layout_title">Apache-2.0 license</string>
    <string name="license_frontend_layout_description">License for the app and Google Material Icons</string>
    <string name="license_backend_section_header">Behind the scenes</string>
    <string name="license_backend_layout_title">Other</string>
    <string name="license_backend_layout_description">Various licenses for libraries used in the app</string>
    <string name="about_activity_title">About</string>
    <string name="about_basic_info_header">Basic info</string>
    <string name="about_version_layout_title">Version</string>
    <string name="about_commit_layout_title">Commit</string>
    <string name="about_source_layout_title">Source</string>
    <string name="about_source_layout_description">CominAtYou/Silverpoint</string>
    <string name="about_attribution_section_header">Attribution</string>
    <string name="about_icons_layout_title">Icons</string>
    <string name="about_icons_layout_description">Google Material Icons</string>
    <string name="about_license_layout_title">Licenses</string>
    <string name="about_license_layout_description">App, icons, and libraries are licensed under the Apache-2.0 or other licenses</string>
    <string name="settings_activity_title">Settings</string>
    <string name="settings_general_section_header">General</string>
    <string name="settings_incident_checks_layout_title">Automatic incident checks</string>
    <string name="settings_incident_checks_layout_description">Allow the app to automatically check for incidents</string>
    <string name="settings_frequency_select_layout_title">Update frequency</string>
    <string name="settings_frequency_select_layout_description">Loading…</string>
    <string name="settings_frequency_select_layout_fifteen_minutes_description">15 minutes</string>
    <string name="settings_frequency_select_layout_thirty_minutes_description">30 minutes</string>
    <string name="settings_frequency_select_layout_one_hour_description">1 hour</string>
    <string name="settings_snooze_notifications_layout_title">Snooze notifications</string>
    <string name="settings_snooze_notifications_layout_description">Pause notifications for a certain amount of time</string>
    <string name="settings_appearance_section_header">Appearance</string>
    <string name="settings_theme_layout_title">Theme</string>
    <string name="settings_theme_layout_default_description">Loading…</string>
    <string name="settings_theme_layout_light_description">Light</string>
    <string name="settings_theme_layout_dark_description">Dark</string>
    <string name="settings_theme_layout_follow_system_description">Follow system</string>
    <string name="settings_advanced_section_header">Advanced</string>
    <string name="settings_about_layout_header">About</string>
    <string name="settings_about_layout_description">Version, licenses</string>
    <string name="frequency_select_activity_title">Update frequency</string>
    <string name="frequency_select_fifteen_minutes_option">15 minutes</string>
    <string name="frequency_select_thirty_minutes_option">30 minutes</string>
    <string name="frequency_select_one_hour_option">1 hour</string>
    <string name="frequency_select_activity_notice">Longer times will mean that you won\'t get incident notifications as often, but will use less battery and data.</string>
    <string name="theme_select_activity_title">Theme</string>
    <string name="theme_select_option_light">Light</string>
    <string name="theme_select_option_dark">Dark</string>
    <string name="theme_select_option_follow_system">Follow system</string>
    <string name="theme_select_activity_notice">\'Follow system\' will automatically change the theme to match the system theme. To override it, select one of the above settings.</string>
    <string name="snooze_notifications_bottom_sheet_title">Snooze notifications</string>
    <string name="developer_options_bottom_sheet_title">Developer options</string>
    <string name="incidents_notification_channel_group_name">Incidents</string>
    <string name="miscellaneous_notification_channel_group_name">Miscellaneous</string>
    <string name="new_incident_notification_channel_name">New Incidents</string>
    <string name="new_incident_notification_channel_description">Notifications for new incidents</string>
    <string name="incident_updates_notification_channel_name">Incident Updates</string>
    <string name="incident_updates_notification_channel_description">Notifications regarding updates for existing incidents.</string>
    <string name="available_updates_notification_channel_name">Available Updates</string>
    <string name="available_updates_notification_channel_description">Notifications for when required updates are available.</string>
    <string name="update_snackbar_standard_update_available_label">Update available (%1$s)</string>
    <string name="update_snackbar_breaking_update_available_label">Update available. You will not be able to receive notifications until you update.</string>
    <string name="update_snackbar_action_button_text">Update</string>
    <string name="update_downloads_channel_name">Update Downloads</string>
    <string name="update_downloads_channel_description">Notifications for when updates are being downloaded.</string>
    <string name="update_downloads_notification_title">Downloading update</string>
    <string name="update_downloads_notification_description">Downloading version %1$s</string>
</resources>