<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            android:background="@color/collapsing_toolbar_background"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.TitleLarge"
            app:collapsedTitleTextAppearance="@style/ThemeOverlay.App.ToolbarText"
            app:expandedTitleMarginStart="24dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/license_activity_title"
                android:elevation="0dp"
                app:navigationIcon="@drawable/ic_arrow_back"
                android:id="@+id/top_bar"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextAppearance.AppCompat.MaterialSectionHeader"
                android:text="@string/license_frontend_section_header"
                android:id="@+id/frontend_header"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/frontend_layout"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                app:layout_constraintTop_toBottomOf="@id/frontend_header"
                android:layout_marginTop="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/frontend_title"
                    android:text="@string/license_frontend_layout_title"
                    style="@style/TextAppearance.AppCompat.InfoTitle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gs_text_regular"
                    app:layout_constraintTop_toBottomOf="@id/frontend_title"
                    app:layout_constraintStart_toStartOf="@id/frontend_title"
                    android:id="@+id/frontend_description"
                    android:layout_marginTop="2dp"
                    android:text="@string/license_frontend_layout_description"
                    android:paddingBottom="16dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_backend_section_header"
                android:id="@+id/behind_the_scenes_header"
                style="@style/TextAppearance.AppCompat.MaterialSectionHeader"
                app:layout_constraintTop_toBottomOf="@id/frontend_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/behind_the_scenes_layout"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/behind_the_scenes_header"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="parent"
                android:background="?attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/license_backend_layout_title"
                        android:id="@+id/behind_the_scenes_title"
                        style="@style/TextAppearance.AppCompat.InfoTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="24dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/behind_the_scenes_title"
                        android:fontFamily="@font/gs_text_regular"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/license_backend_layout_description"
                        android:paddingBottom="16dp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>