<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon_bell"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_notification_bell"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAccessibility="no"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enable_notifications_title"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/ps_regular"
            android:text="@string/enable_notifications"
            android:textColor="@color/text"
            android:textSize="38sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_bell" />

        <TextView
            android:id="@+id/notifications_explanation"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gs_text_regular"
            android:text="@string/enable_notifications_explanation"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="200dp"
            android:layout_marginStart="36dp"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/enable_notifications_title" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/gs_text_regular"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/back"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:fontFamily="@font/gs_text_regular"
            android:textStyle="bold"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>